# sphinx-docs-multiversions-jb

./: .gitignore  README.md  _config.yml  _toc.yml  pyproject.toml
.github/workflows/: build_docs.yml
_static/: version_switcher.json
docs/: about.md  demo.py
src/package/: __init__.py
